# elephantry

./: .gitignore  .gitlab-ci.yml  .rustfmt.toml  CHANGELOG.md  CREDITS.md  Cargo.toml  README.md  RELEASES.md  release
.github/workflows/: ci.yml
cli/: .env.dist  Cargo.toml
cli/src/: error.rs  generate.rs  inspect.rs  main.rs  pq.rs
core/: Cargo.toml  build.rs
core/examples/: 00-config.rs  01-execute.rs  02-query.rs  03-read.rs  04-write.rs  05-extra.rs  06-complex.rs  07-relations.rs  08-async.rs  08-composite.rs  09-async.rs  10-transaction.rs  11-notification.rs  12-copy.rs  13-enum.rs  database.sql  structure.sql
core/fuzz/: Cargo.toml
core/fuzz/fuzz_targets/: fuzz_copy.rs  fuzz_exec.rs  fuzz_query.rs
core/src/: array.rs  async.rs  bb8.rs  config.rs  connection.rs  entity.rs  errors.rs  from_sql.rs  from_text.rs  inspect.rs  interval.rs  lib.rs  model.rs  money.rs  notify.rs  pager.rs  pgpass.rs  pool.rs  projectable.rs  projection.rs  r2d2.rs  rocket.rs  rows.rs  structure.rs  to_sql.rs  to_text.rs  transaction.rs  tuple.rs
core/src/config/: channel_binding.rs  gssencmode.rs  load_balance_hosts.rs  mod.rs  sslcertmode.rs  sslmode.rs  sslnegotiation.rs  target_session_attrs.rs
core/src/entity/: mod.rs  simple.rs
core/src/inspect/: column.rs  constraint.rs  extension.rs  function.rs  mod.rs  relation.rs  schema.rs  trigger.rs  types.rs
core/src/pq/: mod.rs  result.rs  type.rs
core/src/sql/: array.rs  bit.rs  bytea.rs  bytes.rs  composite.rs  date.rs  enum.rs  hstore.rs  interval.rs  json.rs  jsonb.rs  ltree.rs  mod.rs  money.rs  multirange.rs  numeric.rs  range.rs  record.rs  time.rs  timestamp.rs  uuid.rs  xml.rs
core/src/sql/date/: interval.rs  mod.rs  timestamp.rs  timestamptz.rs
core/src/sql/date/chrono/: mod.rs  timestamptz.rs
core/src/sql/date/jiff/: mod.rs  timestamp.rs  timestamptz.rs
core/src/sql/geo/: box.rs  circle.rs  coordinate.rs  line.rs  mod.rs  path.rs  point.rs  polygon.rs  segment.rs
core/src/sql/ltree/: lquery.rs  ltxtquery.rs  mod.rs
core/src/sql/net/: cidr.rs  inet.rs  macaddr.rs  macaddr8.rs  mod.rs
core/src/sql/range/: bounds.rs  mod.rs
core/src/sql/time/: chrono.rs  jiff.rs  mod.rs
core/src/v2/: connection.rs  inspect.rs  mod.rs  pq.rs  transaction.rs
core/src/where/: builder.rs  mod.rs
core/tests/: basic.rs  entity.rs  entity_derive.rs
derive/: Cargo.toml
derive/src/: composite.rs  entity.rs  enum.rs  lib.rs  params.rs  symbol.rs
docs/: README.md  logo.xcf  quickstart.md
loxo/: Cargo.toml
loxo-cli/: Cargo.toml
loxo-cli/src/: generate.rs  inspect.rs  main.rs
loxo-derive/: Cargo.toml
loxo-derive/src/: lib.rs
loxo/examples/: 01-execute.rs  02-query.rs  03-find-all.rs  03-read.rs  04-write.rs  05-extra.rs  06-complex.rs  07-relations.rs
loxo/src/: array.rs  connection.rs  entity.rs  errors.rs  inspect.rs  interval.rs  lib.rs  model.rs  pager.rs  projection.rs  rows.rs  to_sql.rs
loxo/src/pq/: from_sql.rs  mod.rs  to_sql.rs
loxo/src/row/: mod.rs  structure.rs
loxo/tests/: basic.rs  entity.rs  entity_derive.rs
romm/: Cargo.toml
romm-cli/: .gitignore  Cargo.toml
romm-cli/src/: generate.rs  inspect.rs  main.rs
romm-derive/: Cargo.toml
romm-derive/src/: lib.rs
romm/examples/: 01-execute.rs  02-query.rs  03-find-all.rs  basic.rs  basic.sql  basic_derive.rs  entity.rs  entity_derive.rs
romm/src/: connection.rs  entity.rs  errors.rs  inspect.rs  lib.rs  model.rs  projection.rs  row.rs  row_structure.rs
romm/src/pq/: from_sql.rs  mod.rs  to_sql.rs
romm/src/row/: mod.rs  structure.rs
romm/tests/: basic.rs  entity.rs  entity_derive.rs
