[workspace]
members = [
    "core",
    "cli",
    "derive",
]
resolver = "3"

[workspace.package]
version = "5.1.1"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2024"
license = "MIT"
homepage = "https://elephantry.github.io"
repository = "https://github.com/elephantry/elephantry"

[workspace.dependencies]
thiserror = "2.0"
