[package]
name = "elephantry-cli"
description = "elephantry cli tool"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
case = "1.0"
dotenv = "0.15"
term-table = "1.1"
thiserror = "1.0"

[dependencies.clap]
version = "4.0"
features = ["derive"]

[dependencies.elephantry]
version = "3.0"
features = ["all-types"]
path = "../core/"
