[package]
name = "elephantry-cli"
description = "elephantry cli tool"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
case = "1.0"
term-table = "1.1"
thiserror.workspace = true

[dependencies.clap]
version = "4.0"
features = ["derive"]

[dependencies.elephantry]
version = "4.0"
features = ["all-types", "inspect"]
path = "../core/"

[dependencies.envir]
version = "1.0"
default-features = false
features = ["dotenv"]
