[package]
name = "elephantry"
description = "Object model manager for PostgreSQL"
repository = "https://github.com/elephantry/elephantry"
homepage = "https://elephantry.github.io"
license = "MIT"
version = "2.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2018"
readme = "../docs/README.md"
keywords = ["database", "postgresql"]
categories = ["database"]

[dependencies]
byteorder = "1.3"
bytes = "1.0"
lazy_static = "1.4"
libpq = "1.4"
log = "0.4"
regex = "1.3"
thiserror = "1.0"
tuple_len = "1.0"

[dependencies.arbitrary]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.bit-vec]
version = "0.6"
optional = true

[dependencies.bigdecimal]
version = "0.3"
optional = true

[dependencies.num]
version = "0.4"
optional = true

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "std"]
optional = true

[dependencies.config]
version = "0.11"
optional = true

[dependencies.ipnetwork]
version = "0.18"
optional = true

[dependencies.macaddr]
version = "1.0.0"
optional = true

[dependencies.elephantry-derive]
version = "2.1"
path = "../derive"

[dependencies.geo-types]
version = "0.7"
optional = true

[dependencies.postgres_money]
version = "0.3"
optional = true

[dependencies.r2d2]
version = "0.8"
optional = true

[dependencies.rocket_contrib]
version = "0.4"
optional = true
features = ["databases"]

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.time]
version = "0.3"
features = ["macros", "parsing"]
optional = true

[dependencies.uuid]
version = "0.8"
optional = true

[dependencies.xmltree]
version = "0.10"
optional = true

[dev-dependencies]
serde_json = "1.0"
uuid = "0.8"
env_logger = "0.9"

[dev-dependencies.async-std]
version= "1.6"
features = ["attributes"]

[features]
default = []
all-types = [
    "bit",
    "date",
    "geo",
    "json",
    "money",
    "net",
    "numeric",
    "time",
    "uuid",
    "xml"
]
bit = ["bit-vec", "elephantry-derive/bit"]
config-support = ["config", "serde"]
date = ["chrono", "elephantry-derive/date"]
geo = ["geo-types", "elephantry-derive/geo"]
json = ["serde_json", "elephantry-derive/json"]
money = ["postgres_money", "elephantry-derive/money"]
net = ["ipnetwork", "macaddr", "elephantry-derive/net"]
numeric = ["bigdecimal", "num", "elephantry-derive/numeric"]
rocket = ["r2d2", "rocket_contrib"]
# @see https://github.com/rust-lang/cargo/issues/5565
#uuid = ["dep:uuid", "elephantry-derive/uuid"]
#time = ["dep::time", "elephantry-derive/time"]
xml = ["xmltree", "elephantry-derive/xml"]

[[example]]
name = "00-config"
required-features = ["config-support"]

[[example]]
name = "02-query"
required-features = ["date", "numeric"]

[[example]]
name = "03-read"
required-features = ["date", "numeric"]

[[example]]
name = "04-write"
required-features = ["date", "numeric"]

[[example]]
name = "05-extra"
required-features = ["date", "numeric"]

[[example]]
name = "06-complex"
required-features = ["date", "numeric"]

[[example]]
name = "07-relations"
required-features = ["date", "numeric"]

[[example]]
name = "08-composite"
required-features = ["date", "numeric"]

[[example]]
name = "09-async"
required-features = ["date", "numeric"]

[[example]]
name = "10-transaction"
required-features = ["date", "numeric"]

[[example]]
name = "12-copy"
required-features = ["date", "numeric"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
