[package]
name = "elephantry-derive"
description = "Macro implementation of #[derive(Entity)]"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.26"
quote = "1.0"

[dependencies.syn]
version = "1.0"
features = ["extra-traits"]

[features]
default = []
bit = []
date = []
geo = []
json = []
ltree = []
money = []
numeric = []
net = []
time = []
uuid = []
xml = []
