[package]
name = "elephantry-derive"
description = "Macro implementation of #[derive(Entity)]"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.23"
proc-macro-crate = "3.2"
proc-macro2 = "1.0"
quote = "1.0"

[dependencies.syn]
version = "2.0"
features = ["extra-traits"]

[features]
default = []
bit = []
date = []
chrono = []
geo = []
jiff = []
json = []
ltree = []
money = []
multirange = []
numeric = []
net = []
time = []
uuid = []
xml = []
