[package]
name = "loxo"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2018"

[dependencies]
bytes = "0.5"
libpq = "0.2"
byteorder = "1.3"
log = "0.4"
regex = "1.3"

[dependencies.chrono]
version = "0.4"
optional = true

[dependencies.loxo-derive]
path = "../loxo-derive"
version = "0.1"

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.serde_derive]
version = "1.0"
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.uuid]
version = "0.8"
optional = true

[dev-dependencies]
serde_json = "1.0"
uuid = "0.8"
pretty_env_logger = "0.4"

[features]
default = ["derive"]
date = ["chrono"]
derive = []
json = ["serde_json"]
serde-support = ["serde", "serde_derive"]

[[example]]
name = "07-relations"
required-features = ["date"]
