[package]
name = "romm"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2018"

[dependencies]
log = "0.4"
postgres = "0.15"
postgres-shared = "0.4"

[dev-dependencies]
maplit = "1.0"
serde_json = "1.0"
uuid = "0.8"

[dependencies.romm-derive]
path = "../romm-derive"
version = "0.1"
optional = true

[dev-dependencies.postgres]
version = "0.15"
features = ["with-serde_json", "with-uuid"]
