[package]
name = "romm"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2018"

[dependencies]
bytes = "0.5"
libpq = "0.2"
log = "0.4"

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.uuid]
version = "0.8"
optional = true

[dev-dependencies]
maplit = "1.0"
serde_json = "1.0"
uuid = "0.8"

[dependencies.romm-derive]
path = "../romm-derive"
version = "0.1"

[features]
default = ["derive"]
derive = []
